# houndr

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
crates/houndr-index/: Cargo.toml
crates/houndr-index/benches/: index_bench.rs
crates/houndr-index/src/: builder.rs  lib.rs  posting.rs  query.rs  reader.rs  trigram.rs  writer.rs
crates/houndr-repo/: Cargo.toml
crates/houndr-repo/src/: config.rs  lib.rs  pipeline.rs  vcs.rs  watcher.rs
crates/houndr-repo/tests/: auth_smoke.rs
crates/houndr-server/: Cargo.toml
crates/houndr-server/src/: api.rs  main.rs  state.rs  ui.rs
crates/houndr-server/static/: app.css  app.js
crates/houndr-server/templates/: index.html
deploy/helm/houndr/: Chart.yaml  values.yaml
deploy/helm/houndr/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
docs/: architecture.md  openapi.yaml
